# Stock-Market

./: .dockerignore  .gitignore  Dockerfile  LICENSE  data  docker-compose.yaml  docker-compose.yml  environment.yml  exploration.ipynb  pyproject.toml  requirements.txt  visualisation.ipynb
configs/: LSTM_config.json  RNN_config.json  config.json
notebooks/: ARIMA.ipynb  Baseline.ipynb  LSTM.ipynb  RNN.ipynb  ResNLS.ipynb  exploration.ipynb
scripts/: download_data.sh  download_index_values cn.py  download_index_values_yf.py  download_stock_data_kaggle.sh  populate_stock_database.py
src/: models.py  preprocess.py  streamlit_app.py  train.py
