[project]
name = "stock-market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "mlflow>=2.21.3",
    "pip>=25.0.1",
    "psycopg2-binary>=2.9.10",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.55",
]
